# MyArduinoProjs

WStationOne/: WStationOne.config  WStationOne.files  WStationOne.includes
WStationOne/libraries/: README
WStationOne/src/: Constants.h  Makefile  WStationOne.cpp
WeatherBase/: WeatherBase.files  WeatherBase.includes
WeatherBase/src/: Makefile  WeatherBase.cpp
WeatherStation/: WeatherStation.files  WeatherStation.includes
WeatherStation/src/: Makefile  WeatherStation.cpp
wireless_weather_station/: .gitignore
wireless_weather_station/src/: Constants.h  Data.h  Main.cpp
ws_one/: CMakeLists.txt  WStationOne.cpp
ws_one/cmake/: arduino.cmake  arduino_uno.cmake
